--- a/Laboratory/View/LabEquipmentTVCell.xib
+++ b/Laboratory/View/LabEquipmentTVCell.xib
@@ -19,40 +19,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="uzf-mq-kCJ">
-                        <rect key="frame" x="10" y="0.0" width="310" height="43.5"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S3J-oc-q1t">
-                                <rect key="frame" x="0.0" y="0.0" width="45" height="43.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="WoU-p5-GBN">
-                                <rect key="frame" x="246" y="0.0" width="64" height="43.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2p-jb-2h8">
-                                        <rect key="frame" x="0.0" y="0.0" width="32" height="43.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8f-vf-1tz">
-                                        <rect key="frame" x="32" y="0.0" width="32" height="43.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S3J-oc-q1t">
+                        <rect key="frame" x="16" y="11.5" width="45" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8f-vf-1tz">
+                        <rect key="frame" x="293.5" y="11.5" width="10.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="uzf-mq-kCJ" secondAttribute="trailing" id="R45-Mn-5cu"/>
-                    <constraint firstAttribute="bottom" secondItem="uzf-mq-kCJ" secondAttribute="bottom" id="VFW-Ak-FRJ"/>
-                    <constraint firstItem="uzf-mq-kCJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="aTe-nN-DkC"/>
-                    <constraint firstItem="uzf-mq-kCJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="vja-KV-Swm"/>
+                    <constraint firstItem="S3J-oc-q1t" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GpF-75-uaA"/>
+                    <constraint firstItem="S3J-oc-q1t" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="LGM-NY-LHZ"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="r8f-vf-1tz" secondAttribute="trailing" id="Ter-H4-qja"/>
+                    <constraint firstItem="r8f-vf-1tz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bnl-v8-08V"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
