--- a/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
+++ b/Laboratory/Views/EquipmentInfo/EquipmentInfoView.xib
@@ -100,7 +100,7 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sUd-nP-1ia">
-                    <rect key="frame" x="0.0" y="799" width="421" height="72"/>
+                    <rect key="frame" x="0.0" y="799" width="421" height="102"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nri-LI-CSL">
                             <rect key="frame" x="0.0" y="0.0" width="421" height="36"/>
@@ -109,8 +109,12 @@
                             </constraints>
                             <state key="normal" title="Edit Image"/>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ark-qD-Fbq">
+                            <rect key="frame" x="0.0" y="36" width="421" height="30"/>
+                            <state key="normal" title="🗑️ Remove Equipment"/>
+                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LQ-g7-Vuz">
-                            <rect key="frame" x="0.0" y="36" width="421" height="36"/>
+                            <rect key="frame" x="0.0" y="66" width="421" height="36"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="36" id="f0i-oI-8Zw"/>
                             </constraints>
@@ -141,6 +145,7 @@
                 <outlet property="itemsLabel" destination="AGm-To-MNz" id="JAh-1X-3yu"/>
                 <outlet property="locationTextView" destination="kRb-gL-WFs" id="yw1-yk-JTv"/>
                 <outlet property="nameTextView" destination="M1V-Fj-6mu" id="GA3-Zr-jkU"/>
+                <outlet property="removeEquipmentButton" destination="Ark-qD-Fbq" id="5em-oE-c1N"/>
                 <outlet property="whoIsUsingButton" destination="7LQ-g7-Vuz" id="wbd-xc-4su"/>
             </connections>
             <point key="canvasLocation" x="931.15942028985512" y="257.20108695652175"/>
